# lite_db

./: README.md  pyproject.toml  数据库原理.docx
data/: sample.csv
lite_db/: __init__.py  __main__.py  cli.py  types.py
lite_db/executor/: __init__.py  aggregates.py  errors.py  evaluator.py  index_scan.py  query_executor.py
lite_db/index/: __init__.py  hash_index.py
lite_db/nl2sql/: __init__.py  client.py  errors.py  extractor.py  pipeline.py  prompt.py  validator.py
lite_db/parser/: __init__.py  ast.py  errors.py  lexer.py  parser.py
lite_db/storage/: __init__.py  column_store.py  row_store.py  table_store.py
scripts/: benchmark.py  benchmark_storage.py  nl2sql_cases.py
tests/: test_column_store.py  test_executor.py  test_hash_index.py  test_nl2sql.py  test_parser.py  test_row_store.py  test_smoke.py
