[project]
name = "lite-db"
version = "0.1.0"
description = "轻量级数据库查询引擎 — 数据库原理课程项目（题目二）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
lite-db = "lite_db.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lite_db"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
nl2sql = [
    "dashscope>=1.20",
]
